--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+* {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
     background-color: #282828;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont,       "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI           Symbol", "Noto Color Emoji";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     text-align: center;
+    overflow-x: hidden;
   }
   
   /* Menu */
@@ -51,187 +58,165 @@ body {
       }
   }  
 
-  * {
-    margin: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  
-  :root {
-    font-size: 13px;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 1.618;
-    font-weight: 400;
-  }
-  
-  body {
-    background-color: #2f3238;
-    color: #f5f5f5;
-  }
-  
-  a {
-    color: #fff;
-  }
-  
-  a:hover {
-    opacity: .8;
-  }
-  
-  p {
-    font-size: 1.2rem;
-    color: rgba(245, 245, 245, 0.5);
-  }
-  
-  .small {
-    font-size: 1rem;
-    margin-top: 1em;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4rem 2rem;
-  }
-  
-  header {
-    text-align: center;
-    padding-bottom: 3rem;
-  }
-  
-  h1 {
-    font-size: 2.6rem;
-    line-height: 1.2em;
-    padding-bottom: 1rem;
-    font-weight: 600;
-  }
-  
-  svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  circle {
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    -webkit-transition: -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  }
-  
-  text {
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    text-anchor: middle;
-    letter-spacing: 1px;
-    font-weight: 600;
-  }
-  
-  .svg-text {
-    fill: #545a64;
-  }
-  
-  .svg-masked-text {
-    fill: white;
-  }
-  
-  image {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-    -webkit-transition: -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  }
-  
-  .items {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  
-  .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    position: relative;
-    overflow: hidden;
-    width: 300px;
-    height: 200px;
-    margin: 5px;
-    cursor: pointer;
-    background-color: #3b3e46;
-    border-radius: 2px;
-    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.02), inset 0 0px 0px 1px rgba(0, 0, 0, 0.07);
-            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.02), inset 0 0px 0px 1px rgba(0, 0, 0, 0.07);
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-  }
-  
-  .item:hover circle,
-  .item:hover image {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  
-  button {
-    width: 12px;
-    height: 12px;
-    border: none;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
-    border-radius: 1px;
-  }
-  button.dark {
-    background-color: #2f3238;
-  }
-  button.light {
-    background-color: #f9f9f9;
-  }
-  
-  .options {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-  }
-  .options button {
-    margin-left: .5rem;
-  }
-  
-  .light {
-    background-color: #f9f9f9;
-    color: #1a1a1a;
-  }
-  .light p {
-    color: rgba(26, 26, 26, 0.5);
-  }
-  .light .item {
-    background: #f5f5f5;
-  }
-  .light .svg-text {
-    fill: rgba(0, 0, 0, 0.1);
-  }
-  
+::-webkit-scrollbar {
+  background-color: #282828;
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    width: 10px;
+    border-radius: 10px;
+    background-color: #545454;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+/* Projects */
+#projects {
+  width: 100vw;
+  height: 100vh;
+  background-color: #1b1b1b;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#projects-container {
+  height: 80%;
+  width: 80%;
+  position: relative;
+  text-align: center;
+}
+
+#projects::before {
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 80px;
+  background: linear-gradient(#282828, transparent);
+}
+
+p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 100;
+  text-transform: lowercase;
+  text-align: center;
+  font-size: 12px;
+}
+
+#projects-container::before {
+  position: absolute;
+  left: 50%;
+  bottom: 7.5px;
+  content: '';
+  width: 80%;
+  border-radius: 50%;
+  height: 2px;
+  background-color: #e6e6e6a4;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+#projects-container::after {
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  border-radius: 2px;
+  content: '';
+  width: 10px;
+  height: 20px;
+  background-color: #e6e6e6;
+  transform: rotate(45deg) translate(-50%);
+  -webkit-transform: rotate(45deg) translate(-50%);
+  -moz-transform: rotate(45deg) translate(-50%);
+  -ms-transform: rotate(45deg) translate(-50%);
+  -o-transform: rotate(45deg) translate(-50%);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+}
+
+#hero-nav {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.hero-nav-item:hover {
+  font-weight: 400;
+} 
+
+.project {
+  position: relative;
+  width: 20%;
+  height: 30%;
+  margin: 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.project-backdrop {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.project-name {
+  position: absolute;
+  background: radial-gradient(#28282880, #282828);
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+}
+
+.project-name:hover {
+  opacity: 0;
+  justify-content: baseline;
+}
+
+.project-name > h1 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 100%;
+}
+
+#project-list {
+  margin-top: 10px;
+  width: 100%;
+  height: 79%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
