--- a/style.css
+++ b/style.css
@@ -8,68 +8,77 @@ body {
     background-color: #282828;
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-align: center;
     overflow-x: hidden;
   }
 
+/* Title section */
 
-  /* Avatar and description */
-  
+#section {
+  height: 100vh;
+  width: 100vw;
+  display: flex;   
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
 
-  /* Avatar */
-  .avatar {
-    position: relative;
-    left: -200px;
-    top: -70px;
-    width: 300px;
-    height: auto;
-  }
+#section > canvas {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -100;
+}
   
-  /* Menu */
-  ul { 
-    margin: 10px auto 0; 
-    padding: 0; 
-    list-style: none; 
-    display: table;
-    width: 600px;
-    text-align: center;
-  }
-  li { 
-    display: table-cell; 
-    position: relative; 
-    padding: 15px 0;
-  }
-  a {
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.15em;
-    
-    display: inline-block;
-    padding: 15px 20px;
-    position: relative;
-  }
-  a:after {    
-    background: none repeat scroll 0 0 transparent;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 2px;
-    left: 50%;
-    position: absolute;
-    background: #fff;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-  }
-  a:hover:after { 
-    width: 100%; 
-    left: 0; 
-  }
-  @media screen and (max-height: 300px) {
-      ul {
-          margin-top: 40px;
-      }
-  }  
+#title-left {
+  padding-right: 15px;
+  border-right: white solid 1px;
+}
+
+#title-right {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 15px;
+  font-weight: 200;
+  padding-left: 15px;
+}
+
+#title {
+  display: flex;
+  flex-direction: row; 
+}
+
+#nav {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.nav-item:hover {
+  font-weight: 400;
+}
+
+/* Text */
+
+a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+a:hover {
+  color: pink;
+}
+
+ul { 
+  list-style: none;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 50px;
+  letter-spacing: 5px;
+  font-weight: 200;
+}
 
 ::-webkit-scrollbar {
   background-color: #282828;
@@ -87,6 +96,7 @@ body {
 }
 
 /* Projects */
+
 #projects {
   width: 100vw;
   height: 100vh;
@@ -98,7 +108,7 @@ body {
 }
 
 #projects-container {
-  height: 80%;
+  height: 70%;
   width: 80%;
   position: relative;
   text-align: center;
@@ -117,9 +127,8 @@ body {
 p {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 100;
-  text-transform: lowercase;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 #projects-container::before {
@@ -142,14 +151,34 @@ p {
   -o-border-radius: 50%;
 }
 
-#hero-nav {
+#projects-container::after {
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  border-radius: 2px;
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-color: #e6e6e6;
+  transform: rotate(45deg) translate(-50%);
+  -webkit-transform: rotate(45deg) translate(-50%);
+  -moz-transform: rotate(45deg) translate(-50%);
+  -ms-transform: rotate(45deg) translate(-50%);
+  -o-transform: rotate(45deg) translate(-50%);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+}
+
+#nav {
   height: 100%;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
 }
 
-.hero-nav-item:hover {
+.nav-item:hover {
   font-weight: 400;
 } 
 
@@ -167,7 +196,7 @@ p {
 
 .project-backdrop {
   width: 100%;
-  height: 119%;
+  height: 100%;
   border-radius: 5px;
   object-fit: cover;
   -webkit-border-radius: 5px;
@@ -211,5 +240,15 @@ p {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-   serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+#contact {
+  width: 100vw;
+  height: 100vh;
+  background-color: #1b1b1b;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
